--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm install && npx prisma generate"
+buildCommand = "npm install && npx prisma generate && npm run build"
 
 [deploy]
 startCommand = "npm start"
