Add script to create admin user
- Create scripts/create-admin.ts for initial admin setup
- Add npm run create-admin command
- Supports ADMIN_EMAIL, ADMIN_PASSWORD, COMPANY_NAME env vars

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "generate": "prisma generate",
+    "create-admin": "tsx scripts/create-admin.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit",
